bad/bin_op_and_null_array.example_compiler_output
ERROR
[1mbad/bin_op_and_null_array.lat:3:7: [1;31merror: [0;1moperator && is defined only for `boolean` values, not `null` and `int[]`[m
	null && new int[3];
	     [1;32m^[m
